--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,7 @@
         <ImageView
             android:id="@+id/barman"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/barman" />
+            android:layout_height="match_parent" />
     </LinearLayout>
 
     <LinearLayout
