add methode for add action

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
@@ -53,6 +53,13 @@
             android:layout_height="wrap_content"
             android:text="hall of shame"
             android:onClick="library"/>
+
+        <Button
+            android:id="@+id/add_action"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="add action"
+            android:onClick="add_action"/>
     </LinearLayout>
 
     <LinearLayout
