--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -46,8 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="10"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="nouvelle action" />
+            android:inputType="textPersonName" />
     </LinearLayout>
 
 
